--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.5",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
@@ -22,6 +23,7 @@
     "lucide-react": "^0.279.0",
     "next": "13.4.12",
     "postcss": "8.4.30",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
