--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss": "8.4.30",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.1",
@@ -47,7 +48,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "uploadthing": "^5.6.1",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "prisma": "^5.3.1"
