--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.10.0",
     "@types/node": "20.6.2",
@@ -44,6 +45,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
